<resources>
    <string name="app_name">Cowsino</string>
    <string name="login_button_text">Login / Register</string>
    <string name="username_hint_text">Username</string>
    <string name="password_hint_text">Password</string>
    <string name="username_textview">{Username}</string>
    <string name="money_header_textview">"Wallet: "</string>
    <string name="money_textview">{money}</string>
    <string name="settings_button_text">Settings</string>
    <string name="games_button_text">Games</string>
    <string name="work_button_text">Work</string>
    <string name="home_button_text">Home</string>
    <string name="work_money_button_text">Make Money</string>
    <string name="flip_a_coin_button_text">Flip-A-Coin</string>
    <string name="blackjack_button_text">Blackjack</string>
    <string name="change_username_button_text">Change Username</string>
    <string name="change_password_button_text">Change Password</string>
    <string name="logout_button_text">Logout</string>
    <string name="password_change_hint">New Password</string>
    <string name="username_change_hint">New Username</string>
    <string name="coin_flip_bet_hint">Bet Amount</string>
    <string name="coin_flip_bet_button_text">Flip</string>
    <string name="flipACoinHeaderText">Flip-A-Coin</string>
    <string name="headsOrTailsSwitchOnText">Heads</string>
    <string name="headsOrTailsSwitchOffText">Tails</string>
    <string name="headsOrTailsToggle">HeadsOrTailsToggle</string>
    <string name="statsButtonText">Stats</string>
    <string name="gamblingGainsHeaderTextView">"Gambling Gains: "</string>
    <string name="workGainsHeaderTextView">"Work Gains: "</string>
    <string name="coinFlipGainsHeaderTextView">"Coin-Flip Gains: "</string>
    <string name="coinFlipLossHeaderTextView">"Coin-Flip Loss: "</string>
    <string name="gamblingGainsTextView">{gambling gains}</string>
    <string name="workGainsTextView">{work gains}</string>
    <string name="coinFlipGainsTextView">{coin flip gains}</string>
    <string name="coinFlipLossTextView">{coin flip loss}</string>
    <string name="totalGainsHeaderTextView">"Total Gains: "</string>
    <string name="totalLossHeaderTextView">"Total Loss: "</string>
    <string name="totalGainsTextView">{total gains}</string>
    <string name="totalLossTextView">{total loss}</string>
    <string name="chipHeadsContentDescription">poker chip heads up</string>
    <string name="chipTailsContentDescription">poker chip tails up</string>
    <string name="resetStatsButtonText">Reset Stats</string>
    <string name="deleteAccountButtonText">Delete Account</string>
    <string name="resetStatsTextView">Are you sure you want to reset your stats? This action cannot be undone.</string>
    <string name="deleteAccountTextView">Are you sure you want to delete your account? This action cannot be undone.</string>
</resources>
