<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/home_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:onClick="BackToHomePage"
        android:text="@string/home_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/username_textView"
        android:layout_width="380dp"
        android:layout_height="71dp"
        android:layout_marginTop="16dp"
        android:text="@string/username_textview"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/money_textView"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:text="@string/money_textview"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/money_header_textView"
        app:layout_constraintTop_toTopOf="@+id/money_header_textView" />

    <TextView
        android:id="@+id/money_header_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/money_header_textview"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_textView" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="243dp"
        android:layout_height="56dp"
        android:onClick="LoginPageToHomePage"
        android:text="@string/login_button_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.525" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="325dp"
        android:layout_height="54dp"
        android:ems="10"
        android:hint="@string/username_hint_text"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="325dp"
        android:layout_height="51dp"
        android:ems="10"
        android:hint="@string/password_hint_text"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/loginGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="editTextTextEmailAddress, editTextTextPassword, login_button"
        tools:visibility="gone" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/homePageGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="username_textView, money_textView, money_header_textView, games_button, work_button, logout_button"
        tools:visibility="gone" />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/logout_button_text"
        android:onClick="HomePageToLoginPage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/games_button"
        android:layout_width="140dp"
        android:layout_height="122dp"
        android:layout_marginTop="48dp"
        android:text="@string/games_button_text"
        android:onClick="HomePageToGamesPage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.177"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/money_textView" />

    <Button
        android:id="@+id/work_button"
        android:layout_width="140dp"
        android:layout_height="122dp"
        android:layout_marginTop="48dp"
        android:text="@string/work_button_text"
        android:onClick="HomePageToWorkPage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.756"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/money_textView" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/workGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="home_button, money_header_textView, money_textView, username_textView, work_money_button"
        tools:visibility="gone" />

    <Button
        android:id="@+id/work_money_button"
        android:layout_width="310dp"
        android:layout_height="337dp"
        android:text="@string/work_money_button_text"
        android:textSize="48sp"
        android:onClick="WorkForMoney"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/gamesGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="home_button, money_header_textView, money_textView, username_textView, flip_a_coin_button, blackjack_button"
        tools:visibility="visible" />

    <Button
        android:id="@+id/flip_a_coin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flip_a_coin_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.221"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.251" />

    <Button
        android:id="@+id/blackjack_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blackjack_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.782"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.251" />

</androidx.constraintlayout.widget.ConstraintLayout>